# vibes

./: main.py  pyproject.toml  spec.py
.zed/: settings.json
modules/echo/: main.ts  main_test.ts  spec.toml
modules/invoice/: main.ts  main_test.ts  spec.toml
modules/time/: main.ts  main_test.ts  spec.toml
