[project]
name = "hack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "databricks-sdk>=0.56.0",
    "litellm>=1.72.2",
    "openai>=1.85.0",
    "pygments>=2.19.1",
    "tomlkit>=0.13.3",
]

   [[tool.uv.index]]
   name = "pypi"
   url = "https://pypi.org/simple"
   default = true
   
